--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/stack": "^6.3.17",
     "expo": "~47.0.12",
+    "expo-barcode-scanner": "~12.1.0",
+    "expo-camera": "~13.1.0",
     "expo-status-bar": "~1.4.2",
     "native-base": "^3.4.25",
     "react": "18.1.0",
-    "react-native": "0.70.5",
+    "react-native": "0.70.8",
+    "react-native-gesture-handler": "2.8.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-svg": "13.4.0"
   },
